examples/invalid/ns/memory/hello_task_glm_ref_spawn_invalid.ns
mod cpu Main {
  async fn ping(head: ref Node) -> i64 {
    return 7;
  }

  fn main() -> i64 {
    let head: ref Node = alloc_node(1, null());
    let task: Task<i64> = spawn(ping(head));
    return join(task);
  }
}
